--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
     <title>Polyworld</title>
     <link rel='stylesheet' href='/styles.css' />
     <script src='/config.js'></script>
+    <script type="module" src="/scripts/api.js"></script>
   </head>
   <body>
     <div id='app'>
